--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/AndersonOrtizDiasJunior/PortfolioAPI/issues"
   },
-  "homepage": "https://github.com/AndersonOrtizDiasJunior/PortfolioAPI#readme"
+  "homepage": "https://github.com/AndersonOrtizDiasJunior/PortfolioAPI#readme",
+  "dependencies": {
+    "dotenv": "^16.3.2",
+    "express": "^4.18.2"
+  }
 }
