--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/AndersonOrtizDiasJunior/PortfolioAPI#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongo": "^0.1.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.0"
   }
 }
