--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/AndersonOrtizDiasJunior/PortfolioAPI#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongo": "^0.1.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
