--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "mongo": "^0.1.0",
+    "passport": "^0.7.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
   }
