--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "portfolioapi",
-  "jest" : {
-    "preset": "@shelf/jest-mongodb"
-  },
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -32,9 +29,5 @@
     "passport-github2": "^0.1.12",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
-  },
-  "devDependencies": {
-    "@shelf/jest-mongodb": "^4.2.0",
-    "jest": "^29.7.0"
   }
 }
